<resources>
    <string name="app_name">Dr.Aung Videos</string>
    <string name="login">Login</string>
    <string name="collection">Collection</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="video">Video</string>
    <string name="play_button">Play Button</string>
    <string name="more_videos">More Videos</string>
    <string name="recent">Recent</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="expiry">Expiry</string>
    <string name="ph">Ph</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="app_credit">Apyar App@2021</string>
    <string name="profile">Profile</string>
</resources>